deployment/kube-prometheus-stack/base/kube-prometheus-stack.dr.yaml
# Allow Prometheus to access the API server for service discovery.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-server
  namespace: istio-system
spec:
  host: kubernetes.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
  exportTo: [ . ]
